fix spacing on display

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body{
     font-family: "digital-clock", monospace;
     font-weight: 400;
     font-style: normal;
-    padding:12px 16px 4px 16px;
+    padding:16px 16px 8px 16px;
     text-align:right;
     margin-top:0px ;
     margin-bottom:16px;
